fix(app): menu / navigation mobile styling

--- a/app/styles/Menu.module.css
+++ b/app/styles/Menu.module.css
@@ -68,3 +68,100 @@
   font-family: var(--font-sans);
   line-height: 70px;
 }
+
+/* BREAKPOINTS */
+@media screen and (max-width: 1919px) {
+  .wrapper {
+    grid-template-columns: auto 2fr 2fr;
+    column-gap: 50px;
+    margin: 50px 75px;
+    height: calc(100vh - 50px);
+  }
+  .nav a {
+    font-size: 75px;
+    letter-spacing: 7.5px;
+    line-height: 100px;
+  }
+  .books a {
+    font-size: 30px;
+    line-height: 55px;
+    letter-spacing: 0px;
+  }
+  .books h3 {
+    line-height: 70px;
+  }
+}
+@media screen and (max-width: 1279px) {
+  .wrapper {
+    column-gap: 30px;
+  }
+  .nav {
+    padding-right: 15px;
+  }
+  .nav a {
+    font-size: 55px;
+    letter-spacing: 5px;
+    line-height: 70px;
+  }
+  .books a {
+    font-size: 24px;
+    line-height: 48px;
+    letter-spacing: 0px;
+  }
+  .books h3 {
+    line-height: 48px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .wrapper {
+    column-gap: 20px;
+    margin: 50px;
+  }
+  .nav {
+    padding-right: 20px;
+  }
+  .nav a {
+    font-size: 40px;
+    letter-spacing: 2.5px;
+    line-height: 55px;
+  }
+  .books a {
+    font-size: 18px;
+    line-height: 32px;
+    letter-spacing: 0px;
+  }
+  .books h3 {
+    line-height: 32px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .wrapper {
+    column-gap: 10px;
+    margin: 37px;
+    display: flex;
+    flex-wrap: nowrap;
+    row-gap: 10px;
+    flex-direction: column;
+    height: calc(100vh - 37px);
+  }
+  .nav {
+    padding-right: 20px;
+    flex: auto;
+    width: 100%;
+    display: flex;
+    padding-bottom: 37px;
+  }
+  .books {
+    display: flex;
+    flex-direction: column;
+    flex: auto;
+  }
+  .books a {
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0px;
+  }
+  .books h3 {
+    line-height: 24px;
+  }
+}
